kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: healthsecure-api

spec:
  selector:
    app: healthsecure-api

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
