kubernetes/base/api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: healthsecure-api-route

spec:
  parentRefs:
    - name: gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api

      backendRefs:
        - name: healthsecure-api
          port: 5000
