kubernetes/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: healthsecure-api

spec:
  parentRefs:
    - name: healthsecure-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: healthsecure-api
          port: 5000
